--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,28 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+$bg-c1: rgb(237, 231, 222);
+
+$c1: rgb(2,90,78);
+
+body {
+    width: 100%;
+
+    background-color: $bg-c1;
+    color: $c1;
+
+    box-sizing: border-box;
+    padding: 0%;
+    margin: 0%;
+
+    font-size: 16px;
+    font-family: 'Poppins', sans-serifs;
+
+
+    ::selection{
+        background-color: $c1;
+        color: $bg-c1;
+    }
+
+
+}
