--- a/src/app/components/work/work.component.html
+++ b/src/app/components/work/work.component.html
@@ -11,4 +11,15 @@
                 to delivering engaging and accessible experiences.</p>
         </div>
     </div>
+
+    <div class="projects">
+        <div class="row row1">
+            <div class="project project1"></div>
+            <div class="project project2"></div>
+        </div>
+        <div class="row row2">
+            <div class="project project3"></div>
+            <div class="project project4"></div>
+        </div>
+    </div>
 </div>
