--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
 <div class="header">
     <div class="nav">
-        <li class="nav-item"><a class="nav-link">Work</a></li>
+        <li class="nav-item"><a class="nav-link">Work <span>/</span></a></li>
         <li class="nav-item"><a class="nav-link">About</a></li>
         <li class="nav-item"><a class="nav-link">Note</a></li>
         <li class="nav-item"><a class="nav-link">Contact</a></li>
