--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,20 +1,22 @@
-.header{
+.header {
+    position: fixed;
+    top: 0%;
     width: 100%;
     height: 6rem;
-    
+
     display: flex;
     justify-content: center;
     align-items: center;
 
     z-index: 9;
 
-    .nav{
+    .nav {
         width: 30rem;
         height: 3.5rem;
         // min-width: 45vw;
         max-width: 80vw;
 
-        background-color: rgba(255,255,255,0.4);
+        background-color: rgba(255, 255, 255, 0.4);
         border-radius: 50px;
 
 
@@ -26,14 +28,32 @@
 
 
 
-        .nav-item{
+        .nav-item {
             font-size: 1vw;
             font-weight: 500;
             cursor: pointer;
 
+
+            a>span {
+                display: inline-block;
+                position: absolute;
+                top: 2.55rem;
+                margin-left: 2px;
+
+                padding: 2px 4px 1px 4px;
+                border-radius: 2px;
+                border: 1px solid rgba(75, 75, 75, 0.1);
+
+                font-size: 0.6vw;
+            }
+
             @media screen and (max-width: 426px) {
                 font-size: 3vw;
-                
+
+                a>span{
+                    font-size: 2vw;
+                }
+
             }
         }
 
