--- a/src/app/components/work/work.component.scss
+++ b/src/app/components/work/work.component.scss
@@ -6,7 +6,7 @@
         width: 80%;
         height: 55vh;
         margin: auto;
-        margin-top: 4rem;
+        margin-top: 10rem;
 
         .name,
         .title {
@@ -77,5 +77,10 @@
             }
         }
 
+    }
+
+    .projects{
+        width: 100%;
+        height: 100vw;
     }
 }
