--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -18,6 +18,7 @@
 
         background-color: rgba(255, 255, 255, 0.4);
         border-radius: 50px;
+        backdrop-filter: blur(90px);
 
 
         display: flex;
@@ -37,12 +38,12 @@
             a>span {
                 display: inline-block;
                 position: absolute;
-                top: 2.55rem;
+                top: 1.2rem;
                 margin-left: 2px;
 
-                padding: 2px 4px 1px 4px;
-                border-radius: 2px;
-                border: 1px solid rgba(75, 75, 75, 0.1);
+                padding: 2px 6px 1px 6px;
+                border-radius: 5px;
+                border: 2px solid rgba(75, 75, 75, 0.1);
 
                 font-size: 0.6vw;
             }
