--- a/src/app/components/work/work.component.html
+++ b/src/app/components/work/work.component.html
@@ -14,12 +14,20 @@
 
     <div class="projects">
         <div class="row row1">
-            <div class="project project1"></div>
-            <div class="project project2"></div>
+            <div class="project project1">
+                <p>Project Title</p>
+            </div>
+            <div class="project project2">
+                <p>Project Title</p>
+            </div>
         </div>
         <div class="row row2">
-            <div class="project project3"></div>
-            <div class="project project4"></div>
+            <div class="project project3">
+                <p>Project Title</p>
+            </div>
+            <div class="project project4">
+                <p>Project Title</p>
+            </div>
         </div>
     </div>
 </div>
