--- a/src/app/components/work/work.component.scss
+++ b/src/app/components/work/work.component.scss
@@ -4,7 +4,7 @@
 
     .intro {
         width: 80%;
-        height: 55vh;
+        height: auto;
         margin: auto;
         margin-top: 10rem;
 
@@ -26,7 +26,7 @@
                 position: relative;
                 top: 0%;
                 font-weight: 600;
-                font-size: 8vw;
+                font-size: 8.5vw;
                 line-height: normal;
                 letter-spacing: -0.6vw;
                 margin: auto;
@@ -38,9 +38,9 @@
 
             }
 
-            @media  screen and (max-width:426px) {
+            @media screen and (max-width:426px) {
                 height: 10.5vw;
-                
+
             }
         }
 
@@ -71,7 +71,7 @@
                 margin-top: 14vw;
                 width: 70vw;
 
-                p{
+                p {
                     font-size: 1.6vw;
                 }
             }
@@ -79,8 +79,86 @@
 
     }
 
-    .projects{
+    .projects {
         width: 100%;
-        height: 100vw;
+        height: auto;
+
+        margin: 5rem auto;
+
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: center;
+        gap: 10rem;
+
+        .row {
+            width: 90vw;
+            height: 30rem;
+            // background-color: pink;
+
+            justify-content: space-evenly;
+            gap: 4rem;
+
+            display: flex;
+
+            .project {
+                height: 30rem;
+                min-width: 40%;
+                background-color: rgb(163, 220, 212);
+
+                border-radius: 2rem;
+
+                transition: transform 0.5s ease;
+
+                &:hover {
+                    transform: scaleY(1.01);
+                    box-shadow: 0 0 25px 25px rgba(0, 0, 0, 0.05);
+                    transition: transform 0.5s ease-in-out;
+                    // transition: box-shadow 1s ease-in-out;
+                }
+
+                p {
+                    margin-top: 3rem;
+                    float: right;
+                    margin-right: 2.8rem;
+                    font-size: 1.05rem;
+                    font-weight: 500;
+                }
+            }
+
+            .project1,
+            .project4 {
+                width: 65%;
+                background-color: rgb(208, 148, 229);
+            }
+
+            .project1 {
+                background-color: rgb(189, 223, 249);
+            }
+
+            .project3 {
+                background-color: rgb(232, 184, 156);
+            }
+        }
+
+        @media screen and (max-width: 768px) {
+
+            gap: 3rem;
+
+            .row {
+                width: 90vw;
+                height: 40rem;
+                flex-direction: column;
+                gap: 3rem;
+
+                .project,
+                .project1,
+                .project3,
+                .project4,
+                .project2 {
+                    width: 100%;
+                }
+            }
+        }
     }
 }
