--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -98,36 +98,51 @@ $slider-thumb-size: 50px;
         .range {
             width: 100%;
 
-            -webkit-appearance: none;
+            // -webkit-appearance: none;
             appearance: none;
             cursor: pointer;
-            outline: none;
+            // outline: none;
             overflow: hidden;
             background: repeating-linear-gradient(to right,
                     $slider-thumb-color,
                     $slider-thumb-color calc(5% / 24),
                     transparent calc(5% / 24),
                     transparent calc((100% / 24) * 1));
+            margin-bottom: 100px;
 
-            &::-moz-range-track {
-                height: 50px;
-                background: repeating-linear-gradient(to center,
-                        $slider-thumb-color,
-                        $slider-thumb-color calc(5% / 24),
-                        transparent calc(5% / 24),
-                        transparent calc((100% / 24) * 1));
+            &::-webkit-slider-thumb{
+                margin-left: -1%;
             }
+        }
 
 
-            &::-webkit-slider-runnable-track {
-                height: 50px;
-                background: repeating-linear-gradient(to right,
-                        $slider-thumb-color,
-                        $slider-thumb-color calc(5% / 24),
-                        transparent calc(5% / 24),
-                        transparent calc((100% / 24) * 1));
+
+        #hrs {
+            height: 100px;
+
+            option {
+                height: 100px;
             }
-
         }
     }
 }
+
+
+// &::-moz-range-track {
+//     height: 50px;
+//     background: repeating-linear-gradient(to center,
+//             $slider-thumb-color,
+//             $slider-thumb-color calc(5% / 24),
+//             transparent calc(5% / 24),
+//             transparent calc((100% / 24) * 1));
+// }
+
+
+// &::-webkit-slider-runnable-track {
+//     height: 50px;
+//     background: repeating-linear-gradient(to right,
+//             $slider-thumb-color,
+//             $slider-thumb-color calc(5% / 24),
+//             transparent calc(5% / 24),
+//             transparent calc((100% / 24) * 1));
+// }
