Made changes in footer

--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -47,6 +47,7 @@ $slider-thumb-size: 50px;
                     border-radius: 45px;
                     background-color: rgba(255, 255, 255, 0.4);
                     padding: 0.1rem;
+                    cursor: pointer;
 
                     .d1 {
                         margin-top: 10px;
