--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,7 +1,7 @@
 <div class="footer">
     <div class="row1">
         <div class="column col1">
-            <div class="youtube">
+            <div (click)="openSongLink(currentSong.link)" class="youtube">
                 <div class="d1">
                     <svg fill="#FF0000" viewBox="0 0 32 32" version="1.1" xmlns="http://www.w3.org/2000/svg">
                         <title>youtubemusic</title>
@@ -12,7 +12,7 @@
                 </div>
                 <div class="d2">
                     <div class="line1">On Repeat</div>
-                    <div class="line2">Song Title</div>
+                    <div class="line2">{{ currentSong.title }}</div>
                 </div>
             </div>
         </div>
@@ -36,7 +36,7 @@
         </div>
     </div>
     <div class="row2">
-        <input type="range"  min="1" max="24" step="1" value="1" name="range" class="range" id="range" list="hrs"/>
+        <input type="range" min="1" max="24" step="1" value="1" name="range" class="range" id="range" list="hrs" />
         <datalist id="hrs">
             <option value="0"></option>
             <option value="1"></option>
@@ -63,6 +63,6 @@
             <option value="22"></option>
             <option value="23"></option>
             <option value="24"></option>
-          </datalist>
+        </datalist>
     </div>
 </div>
