Made changes in footer

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -64,5 +64,6 @@
             <option value="23"></option>
             <option value="24"></option>
         </datalist>
+        <div class="line"></div>
     </div>
 </div>
