--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -36,7 +36,12 @@
         </div>
     </div>
     <div class="row2">
-        <input type="range" min="1" max="24" step="1" value="1" name="range" class="range" id="range" list="hrs" (input)="updateLines($event)"/>
+        <!-- <input type="range" min="1" max="24" step="1" value="1" name="range" class="range" id="range" list="hrs" (input)="updateLines($event)"/> -->
+        <!-- <input type="range" min="1" max="24" step="1" value="1" name="range" class="range" id="range" list="hrs" (input)="updateLines($event)"/> -->
+        <input type="range" min="1" max="24" step="1" value="1" name="range" class="range" id="range" list="hrs"
+            (input)="updateLines($event)" />
+
+
         <datalist id="hrs">
             <option value="0"></option>
             <option value="1"></option>
@@ -90,7 +95,14 @@
             <div class="min-line"></div>
             <div class="min-line"></div>
             <div class="min-line"></div> -->
-            <div class="min-line" *ngFor="let line of lines" [class.active]="line <= currentValue" [style.height]="getLineHeight(line)"></div>
+            <!-- <div class="min-line" *ngFor="let line of lines" [class.active]="line <= currentValue" [style.height]="getLineHeight(line)"></div>
+             -->
+            <!-- <div class="min-line"
+                *ngFor="let line of [1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24]; let i = index"
+                [style.height]="getLineHeight(line)"></div> -->
+
+            <div *ngFor="let line of generateArray(24); let i = index" class="min-line"
+                [style.height]="rangeValue === i + 1 ? '60px' : '40px'"></div>
 
         </div>
     </div>
