Made  changes in footer for range

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -18,9 +18,8 @@
         </div>
         <div class="column col2">
             <div class="sub-column1">
-
                 <ul class="links">
-                    <li class="link">Else Where</li>
+                    <li class="link spl-link">Else Where</li>
                     <li class="link">GitHub</li>
                     <li class="link">LinkedIn</li>
                     <li class="link">Instagram</li>
@@ -29,17 +28,15 @@
             </div>
             <div class="sub-column2">
                 <ul class="links">
-                    <li class="link">Contact</li>
+                    <li class="link spl-link">Contact</li>
                     <li class="link">Message</li>
                 </ul>
             </div>
         </div>
     </div>
     <div class="row2">
-        <!-- <input type="range" min="1" max="24" step="1" value="1" name="range" class="range" id="range" list="hrs" (input)="updateLines($event)"/> -->
-        <!-- <input type="range" min="1" max="24" step="1" value="1" name="range" class="range" id="range" list="hrs" (input)="updateLines($event)"/> -->
-        <input type="range" min="1" max="24" step="1" value="1" name="range" class="range" id="range" list="hrs"
-            (input)="updateLines($event)" />
+        <input type="range" min="1" max="24" step="1" [value]="getStepForCurrentTime()" name="range" class="range"
+            id="range" list="hrs" (input)="updateLines($event)" />
 
 
         <datalist id="hrs">
@@ -71,7 +68,17 @@
         </datalist>
         <div class="line"></div>
         <div class="lines">
-            <!-- <div class="min-line"></div>
+            <div *ngFor="let line of generateArray(24); let i = index" class="min-line"
+                [style.height]="rangeValue === i + 1 ? '50px' : '10px'"
+                [ngClass]="{'first-six': i < 6, 'last-six': i >= 18}"></div>
+        </div>
+    </div>
+</div>
+
+<!-- <input type="range" min="1" max="24" step="1" value="1" name="range" class="range" id="range" list="hrs" (input)="updateLines($event)"/> -->
+<!-- <input type="range" min="1" max="24" step="1" value="1" name="range" class="range" id="range" list="hrs" (input)="updateLines($event)"/> -->
+
+<!-- <div class="min-line"></div>
             <div class="min-line"></div>
             <div class="min-line"></div>
             <div class="min-line"></div>
@@ -95,15 +102,8 @@
             <div class="min-line"></div>
             <div class="min-line"></div>
             <div class="min-line"></div> -->
-            <!-- <div class="min-line" *ngFor="let line of lines" [class.active]="line <= currentValue" [style.height]="getLineHeight(line)"></div>
+<!-- <div class="min-line" *ngFor="let line of lines" [class.active]="line <= currentValue" [style.height]="getLineHeight(line)"></div>
              -->
-            <!-- <div class="min-line"
+<!-- <div class="min-line"
                 *ngFor="let line of [1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24]; let i = index"
                 [style.height]="getLineHeight(line)"></div> -->
-
-            <div *ngFor="let line of generateArray(24); let i = index" class="min-line"
-                [style.height]="rangeValue === i + 1 ? '60px' : '40px'"></div>
-
-        </div>
-    </div>
-</div>
