--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -2,6 +2,7 @@
 
 $slider-track-color: #ccc;
 $slider-thumb-color: $c1;
+$slider-thumb-color1: rgb(190, 203, 194);
 $slider-thumb-size: 50px;
 
 
@@ -90,6 +91,15 @@ $slider-thumb-size: 50px;
 
                         .link {
                             margin-bottom: 1.8rem;
+                            cursor: pointer;
+
+                            &:hover{
+                                color: darken($color: $slider-thumb-color, $amount: 0.5);
+                            }
+
+                            &.spl-link{
+                                font-weight: 600;
+                            }
                         }
                     }
                 }
@@ -144,14 +154,22 @@ $slider-thumb-size: 50px;
             display: flex;
             justify-content: space-between;
             flex-direction: row;
+            transform: rotate(180);
+
 
             .min-line {
                 width: 2.3px;
-                height: 40px;
+                height: 30px;
                 background-color: $slider-thumb-color;
                 transition: height 0.5s ease-in-out;
 
-                &:hover{
+                // 190,203,194
+                &.first-six,
+                &.last-six {
+                    background-color: $slider-thumb-color1;
+                }
+
+                &:hover {
                     height: 30px;
                     transition: height 0.5s ease-in-out;
                 }
