--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,7 +1,7 @@
 <div class="header">
     <div class="nav">
-        <li class="nav-item"><a class="nav-link">Work <span>/</span></a></li>
-        <li class="nav-item"><a class="nav-link">About</a></li>
+        <li class="nav-item" routerLink="work"><a class="nav-link">Work <span>/</span></a></li>
+        <li class="nav-item" routerLink="about"><a class="nav-link">About</a></li>
         <li class="nav-item"><a class="nav-link">Notes</a></li>
         <li class="nav-item"><a class="nav-link">Contact</a></li>
     </div>
