--- a/src/app/components/work/work.component.html
+++ b/src/app/components/work/work.component.html
@@ -15,18 +15,22 @@
     <div class="projects">
         <div class="row row1">
             <div class="project project1">
-                <p>Project Title</p>
+                <p>Air Bus</p>
+                <h3>Travel Booking</h3>
             </div>
             <div class="project project2">
-                <p>Project Title</p>
+                <p>Currency Convertor</p>
+                <h3>Realtime Currency App</h3>
             </div>
         </div>
         <div class="row row2">
             <div class="project project3">
-                <p>Project Title</p>
+                <p>Weather Application</p>
+                <h3>Realtime Weather App</h3>
             </div>
             <div class="project project4">
-                <p>Project Title</p>
+                <p>HR Portal</p>
+                <h3>HR and Payroll Portal</h3>
             </div>
         </div>
     </div>
