--- a/src/app/components/about/about.component.scss
+++ b/src/app/components/about/about.component.scss
@@ -61,6 +61,52 @@
                     height: 30vw;
                     border-radius: 45% 45% 0 0;
                 }
+
+                .youtube{
+                    position: relative;
+                    margin-top: -6.22vw;
+                    display: flex;
+                    flex-direction: row;
+                    width: 25vw;
+                    max-width: 90vw;
+                    height: 5rem;
+                    background-color: rgba(255, 255, 255, 0.9);
+                    padding: 0.1rem;
+                    cursor: pointer;
+                    font-size: 1vw;
+                    box-sizing: border-box;
+
+                    .d1 {
+                        margin-top: 10px;
+                        margin-left: 10px;
+
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        svg {
+                            height: 4vw;
+                            width: 4v;
+                        }
+                    }
+
+                    .d2 {
+                        margin-top: 7px;
+                        margin-left: 10px;
+                        display: flex;
+                        flex-direction: column;
+                        justify-content: center;
+                        align-items: flex-start;
+
+                        .line1 {
+                            font-weight: 300;
+                        }
+
+                        .line2 {
+                            font-weight: 600;
+                        }
+                    }
+
+                }
             }
 
             .bio {
@@ -80,9 +126,10 @@
     }
 
     .exp {
-        width: 100%;
+        width: 90%;
         height: 50vw;
         padding: 1vw;
+        margin: auto;
 
         display: flex;
         flex-direction: column;
@@ -104,21 +151,21 @@
             justify-content: space-between;
 
             &.exp1 {
-                width: 25vw;
+                width: 30vw;
             }
 
             &.exp2 {
-                width: 18vw;
-                margin-right: 25vw;
+                width: 20vw;
+                margin-right: 30vw;
             }
 
             &.exp3{
-                width: 68vw;
+                width: 70vw;
             }
 
             &.exp4{
-                width: 35vw;
-                margin-right: 43vw;
+                width: 40vw;
+                margin-right: 50vw;
             }
 
             .side1 {
