About: Made UI changes in About Component

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -81,4 +81,23 @@
             </div>
         </div>
     </div>
+    <div class="edu">
+        <p>
+            Before I got into the software development, I am from a small town name Tirupathi, which is a famous temple town housing Lord Venkateswara swamy and home of Seshachalam forest. Ever since I was a kid, I loved making things
+            look nice, like designing and painting. I even thought about being an architect at one point. Then, when I
+            was 15, I started learning basic programming and ended up switching to Computer Science.
+            <br>
+            <br>
+            I started off with web development, learning HTML, CSS, and JavaScript to understand how websites work. I
+            also did side projects to explore my love for design.
+            <br>
+            <br>
+            Outside of work, I have a small group of friends. I enjoy going on long drives, listening to music, and
+            exploring new places. I love both snowy mountains and breezy coastlines, and I find peace in nature.
+            <br>
+            <br>
+            I also have a soft spot for both cats and dogs. Overall, my life revolves around technology, design, and
+            enjoying the simple things.
+        </p>
+    </div>
 </div>
