Made changes for Footer

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -15,6 +15,10 @@
                     <div class="line2">{{ currentSong.title }}</div>
                 </div>
             </div>
+            <div class="content">
+                <p>&copy; <time datetime="2024">2024</time> Sai Krishna
+                </p>
+            </div>
         </div>
         <div class="column col2">
             <div class="sub-column1">
