--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -35,8 +35,11 @@ $slider-thumb-size: 50px;
                 width: 65%;
                 height: 100%;
 
+                flex-direction: column;
+
                 align-items: flex-start;
-                justify-content: flex-end;
+                justify-content: flex-start;
+                padding-left: 3.5vw;
 
 
                 .youtube {
@@ -79,6 +82,10 @@ $slider-thumb-size: 50px;
                         }
                     }
                 }
+
+                .content{
+                    margin-left: 2vw;
+                }
             }
 
             &.col2 {
@@ -98,13 +105,18 @@ $slider-thumb-size: 50px;
                         .link {
                             margin-bottom: 1.8rem;
                             cursor: pointer;
+                            transition: font-weight 0.1s ease-in-out;
+                            font-size: 1.05vw;
 
                             &:hover {
-                                color: darken($color: $slider-thumb-color, $amount: 0.5);
+                                color: lighten($color: $slider-thumb-color, $amount: 0.9);
+                                font-weight: 500;
+                                transition: font-weight 0.1s ease-in-out;
                             }
 
                             &.spl-link {
                                 font-weight: 600;
+                                font-size: 1.1vw;
                             }
                         }
                     }
